--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/coder.png" alt="Sagar Bhat image", width="200", height="200"></td>
+      <td><img src="coder.png" alt="Sagar Bhat image", width="200", height="200"></td>
 
       <td><h1>Sagar Bhat</h1>
       <p><i>Founder <strong><a href="https://www.instagram.com/_millionaire.trader_/">Millionaire Trader</a> </strong></strong> </i></p>
